#2329 [Fixed] Anchor: Icon no wrap
increase sizes and padding

--- a/packages/dso-toolkit/src/components/anchor/anchor.mixins.scss
+++ b/packages/dso-toolkit/src/components/anchor/anchor.mixins.scss
@@ -57,10 +57,10 @@
 }
 
 @mixin mode-base() {
-  padding-inline-end: 1.3em;
+  padding-inline-end: 1.5em;
 
   background-repeat: no-repeat;
-  background-size: 1.2em 1.2em;
+  background-size: 1.25em 1.25em;
   background-position: bottom 0 right 0;
 
   &::after {
